mdapipkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Tier__c</fullName>
        <label>Contact Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>C-suite</fullName>
                </value>
                <value>
                    <fullName>Business Head</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>Country Head</fullName>
                </value>
                <value>
                    <fullName>Senior Executive</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Mobile__c</fullName>
        <label>Other Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Personal_Details__c</fullName>
        <label>Personal Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Function__c</fullName>
        <label>Primary Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Senior Management</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Marketing/Communications</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Risk/Finance</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Rubber</fullName>
                </value>
                <value>
                    <fullName>Synthetic</fullName>
                </value>
                <value>
                    <fullName>Latex</fullName>
                </value>
                <value>
                    <fullName>Non-Rubber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>